...
                            }
                            
                            showSoundtracks = false
                        }
                        .font(.system(size: 14))
                        .padding(.trailing)
                        .accessibilityLabel("confirm_selection")
                    }
                }
                .frame(height: 44)
                
                Divider()
            }
...
